--- a/index.html
+++ b/index.html
@@ -4,10 +4,23 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <title> Piprasiam | Portfolio</title>
 </head>
 <body>
+  <section class="header">
+    <div>
+      <h1>Hi! I'm Piprasiam <span>I'm a Web Developer</span></h1>
+      <p>I develop any type of custom websites. My services range from planning,designing and developing to execution and deployment.</p>
+      <a class="hire-me-button" target="_blank" href="https://www.fiverr.com/omnisama">Hire Me</a>
+    </div>
+    <div>
+      <img src="images/person/person-2.png" alt="a man">
+    </div>
+  </section>
   
 </body>
 </html>
