--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
   <title> Piprasiam | Portfolio</title>
 </head>
 <body>
-  <section class="header">
-    <div>
-      <h1>Hi! I'm Piprasiam <span>I'm a Web Developer</span></h1>
-      <p>I develop any type of custom websites. My services range from planning,designing and developing to execution and deployment.</p>
-      <a class="hire-me-button" target="_blank" href="https://www.fiverr.com/omnisama">Hire Me</a>
+  <section class="header flexible-container">
+    <div class="halfwidth intro">
+    <div id="intro-heading">
+      <h1>HI! I'M PIPRASIAM <br>
+      <span style="color: #FFAD5A;">I'M A WEB DEVELOPER</span></h1>
+    </div> 
+      <p>I develop any type of custom websites. My services range from <br> planning,designing and developing to execution and deployment.</p> <br>
+      <a class="link-button" target="_blank" href="https://www.fiverr.com/omnisama">Hire Me</a>
     </div>
-    <div>
+    <div class="halfwidth">
       <img src="images/person/person-2.png" alt="a man">
     </div>
   </section>
