--- a/index.html
+++ b/index.html
@@ -8,20 +8,43 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <title> Piprasiam | Portfolio</title>
+  <title>Omnisama</title>
 </head>
 <body>
   <section class="header flexible-container">
     <div class="halfwidth intro">
     <div id="intro-heading">
-      <h1>HI! I'M PIPRASIAM <br>
-      <span style="color: #FFAD5A;">I'M A WEB DEVELOPER</span></h1>
+      <h1>HI! I'M OMNISAMA <br>
+      <span style="color: #f88c20;">I'M A WEB DEVELOPER</span></h1>
     </div> 
       <p>I develop any type of custom websites. My services range from <br> planning,designing and developing to execution and deployment.</p> <br>
-      <a class="link-button" target="_blank" href="https://www.fiverr.com/omnisama">Hire Me</a>
+      <a class="link-button" target="_blank" href="https://www.fiverr.com/omnisama">Hire Me</a><br>
+      <p style="padding-top: 15px;">Scroll down to explore more about us</p>
     </div>
-    <div class="halfwidth">
+    <div class="halfwidth introimg">
       <img src="images/person/person-2.png" alt="a man">
+    </div>
+  </section>
+  <section>
+    <div id="experiences-heading">
+      <h1>My <span style="color:#f88c20;">Experiences</span></h1>
+    </div>
+    <div class="exp-boxes flexible-container">
+      <div id="left-box" class="exp-item">
+       <img src="/images/illustrators/illustrator-1.png" alt="icon"> 
+       <h3>Web Developer</h3>
+       <p>2021-Present | Childcorp</p>
+      </div>
+      <div id="middle-box" class="exp-item">
+        <img src="/images/illustrators/illustrator-2.png" alt="icon"> 
+        <h3>Web Designer</h3>
+        <p>2020-2021 | Pipramind</p>
+      </div>
+      <div id="right-box" class="exp-item">
+        <img src="/images/illustrators/illustrator-3.png" alt="icon"> 
+        <h3>CSE Intern</h3>
+        <p>2019-2020 | Outworld</p>
+      </div>
     </div>
   </section>
   
