learn more added

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     </div> 
       <p>I develop any type of custom websites. My services range from <br> planning,designing and developing to execution and deployment.</p> <br>
       <a class="link-button" target="_blank" href="https://www.fiverr.com/omnisama">Hire Me</a><br>
-      <p style="padding-top: 15px;">Scroll down to explore more about us</p>
+      <p style="padding-top: 15px;">Scroll down to explore more about me</p>
     </div>
-    <div class="halfwidth introimg">
+    <div class="halfwidth">
       <img src="images/person/person-2.png" alt="a man">
     </div>
   </section>
@@ -46,6 +46,20 @@
         <p>2019-2020 | Outworld</p>
       </div>
     </div>
+  </section>
+  <section class="learn-more">
+    <div class="flexible-container">
+      <div class="halfwidth learnmore-img">
+        <img src="images/pictures/coding.png" alt="some people using laptop">
+        </div>
+        <div class="limit-text halfwidth">
+         <h2>Develop Without Limits</h2>
+         <p>We have a team of creative designers,developers and SEO Specialists <br>
+          that will help you grow your presense online.</p> <br>
+          <a class="link-button" target="_blank" href="#">Learn More</a>
+        </div>
+    </div>
+    
   </section>
   
 </body>
