--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
     <div class="exp-boxes flexible-container">
       <div id="left-box" class="exp-item">
        <img src="/images/illustrators/illustrator-1.png" alt="icon"> 
-       <h3>Web Developer</h3>
+       <h4>Web Developer</h4>
        <p>2021-Present | Childcorp</p>
       </div>
       <div id="middle-box" class="exp-item">
         <img src="/images/illustrators/illustrator-2.png" alt="icon"> 
-        <h3>Web Designer</h3>
+        <h4>Web Designer</h4>
         <p>2020-2021 | Pipramind</p>
       </div>
       <div id="right-box" class="exp-item">
         <img src="/images/illustrators/illustrator-3.png" alt="icon"> 
-        <h3>CSE Intern</h3>
+        <h4>CSE Intern</h4>
         <p>2019-2020 | Outworld</p>
       </div>
     </div>
@@ -55,11 +55,24 @@
         <div class="limit-text halfwidth">
          <h2>Develop Without Limits</h2>
          <p>We have a team of creative designers,developers and SEO Specialists <br>
-          that will help you grow your presense online.</p> <br>
+          that will help you grow your presence online.</p> <br>
           <a class="link-button" target="_blank" href="#">Learn More</a>
         </div>
     </div>
-    
+  </section>
+  <section class="community">
+    <div class="flexible-container">
+      <div class="community-text halfwidth">
+        <h2>Join Our Global Community</h2>
+        <p>We have a 24/7 active global community for communicating and support
+        that has alsmost 100k members</p> <br>
+        <a class="link-button" target="_blank" href="#">Join Now</a>
+      </div>
+      <div class="community-img halfwidth">
+        <img src="images/pictures/project.png" alt="man working on project">
+      </div>
+    </div>
+
   </section>
   
 </body>
