footer added,community background fixed

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <img src="images/pictures/coding.png" alt="some people using laptop">
         </div>
         <div class="limit-text halfwidth">
-         <h2>Develop Without Limits</h2>
+         <h2>Grow Your Business</h2>
          <p>We have a team of creative designers,developers and SEO Specialists <br>
           that will help you grow your presence online.</p> <br>
           <a class="link-button" target="_blank" href="#">Learn More</a>
@@ -65,15 +65,37 @@
       <div class="community-text halfwidth">
         <h2>Join Our Global Community</h2>
         <p>We have a 24/7 active global community for communicating and support
-        that has alsmost 100k members</p> <br>
+        that has almost 100k members</p> <br>
         <a class="link-button" target="_blank" href="#">Join Now</a>
       </div>
       <div class="community-img halfwidth">
         <img src="images/pictures/project.png" alt="man working on project">
       </div>
     </div>
-
   </section>
-  
+  <section>
+    <div id="contact-heading">
+      <h1>Contact <span style="color:#f88c20;">Us</span></h1>
+    </div>
+    <div class="contact-area flexible-container">
+    <div class="contact-img">
+    <img src="images/pictures/contact-icon.jpg" alt="contact icons">
+    </div>
+    <div class="contact-form">
+      <form action="">
+        <input class="contact-name" id="name" placeholder="Name*" required="" type="text">
+        <input class="contact-email" placeholder="E-mail*" required="" type="email">
+        <textarea class="contact-message" placeholder="Message*" required="" type="tel"></textarea>
+        <input class="submit-button" id="submit" type="submit" value="Send">
+        </form>
+    </div>
+    </div>
+  </section>
+<section class="footer">
+  <div id="footer-text">
+    <h3><span style="color: white;">Omni</span> <span style="color:#f88c20;">sama</span></h3>
+    <p style="color: gainsboro; font-size: 15px;">Copyright © Omnisama 2022</p>
+  </div>
+</section>    
 </body>
 </html>
