icons not showing fixed

--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
     </div>
     <div class="exp-boxes flexible-container">
       <div id="left-box" class="exp-item">
-       <img src="/images/icons/ill-1.png" alt="icon1"> 
+       <img src="images/icons/ill-1.png" alt="icon1"> 
        <h4>Web Developer</h4>
        <p>2021-Present | Childcorp</p>
       </div>
       <div id="middle-box" class="exp-item">
-        <img src="/images/icons/ill-2.png" alt="icon2"> 
+        <img src="images/icons/ill-2.png" alt="icon2"> 
         <h4>Web Designer</h4>
         <p>2020-2021 | Pipramind</p>
       </div>
       <div id="right-box" class="exp-item">
-        <img src="/images/icons/ill-3.png" alt="icon3"> 
+        <img src="images/icons/ill-3.png" alt="icon3"> 
         <h4>CSE Intern</h4>
         <p>2019-2020 | Outworld</p>
       </div>
