--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <title>Omnisama</title>
 </head>
 <body>
-  <section class="header flexible-container">
-    <div class="halfwidth intro">
+  <section class="flexible-container">
+    <div class="halfwidth" id="intro">
     <div id="intro-heading">
       <h1>HI! I'M OMNISAMA <br>
       <span style="color: #f88c20;">I'M A WEB DEVELOPER</span></h1>
@@ -29,7 +29,7 @@
     <div id="experiences-heading">
       <h1>My <span style="color:#f88c20;">Experiences</span></h1>
     </div>
-    <div class="exp-boxes flexible-container">
+    <div class="flexible-container" id="exp-boxes">
       <div id="left-box" class="exp-item">
        <img src="images/icons/ill-1.png" alt="icon1"> 
        <h4>Web Developer</h4>
@@ -47,12 +47,12 @@
       </div>
     </div>
   </section>
-  <section class="learn-more">
+  <section id="learn-more">
     <div class="flexible-container">
-      <div class="halfwidth learnmore-img">
+      <div class="halfwidth" id="learnmore-img">
         <img src="images/pictures/coding.png" alt="some people using laptop">
         </div>
-        <div class="limit-text halfwidth">
+        <div class="halfwidth" id="grow-text">
          <h2>Grow Your Business</h2>
          <p>We have a team of creative designers,developers and SEO Specialists <br>
           that will help you grow your presence online.</p> <br>
@@ -60,15 +60,15 @@
         </div>
     </div>
   </section>
-  <section class="community">
+  <section id="community">
     <div class="flexible-container">
-      <div class="community-text halfwidth">
+      <div class="halfwidth" id="community-text">
         <h2>Join Our Global Community</h2>
         <p>We have a 24/7 active global community for communicating and support
         that has almost 100k members</p> <br>
         <a class="link-button" target="_blank" href="#">Join Now</a>
       </div>
-      <div class="community-img halfwidth">
+      <div class="halfwidth" id="community-img">
         <img src="images/pictures/project.png" alt="man working on project">
       </div>
     </div>
@@ -77,21 +77,21 @@
     <div id="contact-heading">
       <h1>Contact <span style="color:#f88c20;">Us</span></h1>
     </div>
-    <div class="contact-area flexible-container">
+    <div class="flexible-container" id="contact-area">
     <div class="contact-img">
     <img src="images/pictures/contact-icon.jpg" alt="contact icons">
     </div>
-    <div class="contact-form">
+    <div id="contact-form">
       <form action="">
-        <input class="contact-name" id="name" placeholder="Name*" required="" type="text">
-        <input class="contact-email" placeholder="E-mail*" required="" type="email">
-        <textarea class="contact-message" placeholder="Message*" required="" type="tel"></textarea>
+        <input id="contact-name" placeholder="Name*" required="" type="text">
+        <input id="contact-email" placeholder="E-mail*" required="" type="email">
+        <textarea id="contact-message" placeholder="Message*" required="" type="tel"></textarea>
         <input class="submit-button" id="submit" type="submit" value="Send">
         </form>
     </div>
     </div>
   </section>
-<section class="footer">
+<section id="footer">
   <div id="footer-text">
     <h3><span style="color: white;">Omni</span> <span style="color:#f88c20;">sama</span></h3>
     <p style="color: gainsboro; font-size: 15px;">Copyright © Omnisama 2022</p>
